B-68612 Tech Debt: FDA: replace Collections.singletonList() by List.of().  In packages dist-foreign-integration and dist-foreign-repository